alterações no index, seleção de turma e registro de ocorrencia

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             </section>
             <nav>
                 <section>
-                    <a href="selecao_serie.html" target="">
-                        <button class="button_link">Painel de turmas do E.M.</button>
+                    <div class="col-md-4 mt-5">
+                        <div  class="textOnInput">
+                            <label for="email"><span class="label-style">E-mail:</span></label>
+                            <input class="form-control" id="email" type="email" name="email" placeholder="nomeusuario@email.com" />
+                        </div>
+                    </div>
+                    <a href="selecao_curso.html" target="">
+                        <button class="button_link">Iniciar registro de ocorrência</button>
                     </a>
                 </section>
             </nav>
