--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -15,11 +15,11 @@
             </header>
             <section id="boas_vindas">
                 <h1 id="h1_index">Turma "X"</h1>
-                <h3 id="h3_boas_vindas">Selecione uma ou mais ocorrências e</h3>
+                <h3 id="h3_boas_vindas">Selecione uma ocorrência e</h3>
                 <h3 id="h3_boas_vindas">selecione um ou mais alunos que deseja atribuir</h3>
             </section>
             <nav>
-                <h4>Selecione a(s) ocorrência(s)</h4>
+                <h4>Selecione a ocorrência:</h4>
                 <section>
                     <a href="#" target="">
                         <button class="button_link">Sem uniforme</button>
@@ -40,39 +40,15 @@
                         <button class="button_link">Dificuldade no aprendizado</button>
                     </a>
                 </section>
-                <h4>Selecione o(s) aluno(s)</h4>
+                <h4>Selecione o(s) aluno(s):</h4>
                 <section>
-                    <a href="#" target="">
-                        <button class="button_link">Daniel Monteiro</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Brenda Rezende</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Paulo da Conceição</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Rodrigo Martins</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Leticia Castro</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Leandro Pereira</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Cecília Moreira</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Ryan Pires</button>
-                    </a>
-                    <a href="#" target="">
-                        <button class="button_link">Manuela da Rocha</button>
-                    </a>
+                    <div>
+                        <input class="form-control" id="nome_aluno" type="text" name="nome_aluno" placeholder="Nome do aluno" />
+                    </div>
                 </section>
                 <section>
                     <a href="#" target="">
-                        <button class="button_atribuir">Atribuir ocorrência(s)</button>
+                        <button class="button_atribuir">Atribuir ocorrência</button>
                     </a>
                 </section>
             </nav>
