--- a/selecao_turma.html
+++ b/selecao_turma.html
@@ -18,36 +18,15 @@
                 <h3 id="h3_boas_vindas">Selecione a turma</h3>
             </section>
             <nav>
-                <section class="turma">
+                <section>
                     <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">A</button>
+                        <button class="button_link">A</button>
                     </a>
                     <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">B</button>
-                    </a>
-                </section>
-                <section class="turma">
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">C</button>
+                        <button class="button_link">B</button>
                     </a>
                     <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">D</button>
-                    </a>
-                </section>
-                <section class="turma">
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">E</button>
-                    </a>
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">F</button>
-                    </a>
-                </section>
-                <section class="turma">
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">G</button>
-                    </a>
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_serie">H</button>
+                        <button class="button_link">C</button>
                     </a>
                 </section>
             </nav>
