--- a/selecao_turma.html
+++ b/selecao_turma.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Sistema de Acompanhamento do Aluno</title>
-		<meta charset="utf-8" />
-		<meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
-		<meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
-		<meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-	<body>
-        <section class="tela">
-            <header>
-                <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
-            </header>
-            <section id="boas_vindas">
-                <h1 id="h1_index">Turma</h1>
-                <h3 id="h3_boas_vindas">Selecione a turma</h3>
-            </section>
-            <nav>
-                <section>
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_link">A</button>
-                    </a>
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_link">B</button>
-                    </a>
-                    <a href="registro_ocorrencia.html" target="">
-                        <button class="button_link">C</button>
-                    </a>
-                </section>
-            </nav>
-            <footer>
-                <p>Desenvolvido por: Agis - Francisco Diego - Ronan - Samara</p>
-                <p>2023</p>
-            </footer>
+<head>
+    <title>Sistema de Acompanhamento do Aluno</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
+    <meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
+    <meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+    <section class="tela">
+        <header>
+            <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
+        </header>
+        <section id="boas_vindas">
+            <h1 id="h1_index">Turma</h1>
+            <h3 id="h3_boas_vindas">Selecione a turma</h3>
         </section>
-	</body>
+        <nav>
+            <section>
+                <a href="registro_ocorrencia.html?turma=A" target="">
+                    <button class="button_link">A</button>
+                </a>
+                <a href="registro_ocorrencia.html?turma=B" target="">
+                    <button class="button_link">B</button>
+                </a>
+                <a href="registro_ocorrencia.html?turma=C" target="">
+                    <button class="button_link">C</button>
+                </a>
+            </section>
+        </nav>
+        <footer>
+            <p>Desenvolvido por: Agis - Francisco Diego - Ronan - Samara</p>
+            <p>2023</p>
+        </footer>
+    </section>
+</body>
 </html>
