--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -1,91 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Sistema de Acompanhamento do Aluno</title>
-		<meta charset="utf-8" />
-		<meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
-		<meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
-		<meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-	<body>
-        <section class="tela">
-            <header>
-                <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
-            </header>
-            <section id="boas_vindas">
-                <h1 id="h1_index">Turma "X"</h1>
-                <h3 id="h3_boas_vindas">Selecione uma ou mais ocorrências e</h3>
-                <h3 id="h3_boas_vindas">selecione uma ou mais alunos que deseja atribuir</h3>
-            </section>
-            <nav>
-                <h4>Selecione a(s) ocorrência(s):</h4>
-                <section>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Sem uniforme">Sem uniforme</button>
-                    </a>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Atraso">Atraso</button>
-                    </a>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Não fez a atividade">Não fez a atividade</button>
-                    </a>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Saiu da sala">Saiu da sala</button>
-                    </a>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Atrapalhando a aula">Atrapalhando a aula</button>
-                    </a>
-                    <a href="#" onclick="selecionarBotao(this);" target="">
-                        <button class="button_link" data-ocorrencia="Dificuldade no aprendizado">Dificuldade no aprendizado</button>
-                    </a>
-                </section>
-                <h4>Selecione o(s) aluno(s):</h4>
-                <section>
-                    <div>
-                        <input class="form-control" id="nome_aluno" type="text" name="nome_aluno" placeholder="Nome do aluno" />
-                    </div>
-                </section>
-                <section>
-                    <a href="#" onclick="atribuirOcorrencias();" target="">
-                        <button class="button_atribuir">Atribuir ocorrência</button>
-                    </a>
-                </section>
-            </nav>
-            <footer>
-                <p>Desenvolvido por: Agis - Francisco Diego - Ronan - Samara</p>
-                <p>2023</p>
-            </footer>
+<head>
+    <title>Sistema de Acompanhamento do Aluno</title>
+    <meta charset="utf-8" />
+    <meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
+    <meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
+    <meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+    <section class="tela">
+        <header>
+            <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
+        </header>
+        <section id="boas_vindas">
+            <h1 id="h1_index">Turma "X"</h1>
+            <h3 id="h3_boas_vindas">Selecione uma ou mais ocorrências e</h3>
+            <h3 id="h3_boas_vindas">selecione uma ou mais alunos que deseja atribuir</h3>
         </section>
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                var urlParams = new URLSearchParams(window.location.search);
-                var turma = urlParams.get('turma');
-                document.getElementById('h1_index').innerText = 'Turma ' + turma;
-            });
-
-            function selecionarBotao(elemento) {
-                // Adiciona ou remove a classe 'selected' ao botão clicado
-                elemento.querySelector('.button_link').classList.toggle('selected');
-            }
-
-            function atribuirOcorrencias() {
-                // Obtém todos os botões de ocorrência
-                var botoes = document.querySelectorAll('.button_link');
-
-                // Filtra apenas os botões selecionados
-                var ocorrenciasSelecionadas = Array.from(botoes).filter(function(botao) {
-                    return botao.classList.contains('selected');
-                });
-
-                // Exibe as ocorrências selecionadas (pode ser adaptado conforme sua lógica de atribuição)
-                var ocorrenciasNomes = ocorrenciasSelecionadas.map(function(botao) {
-                    return botao.getAttribute('data-ocorrencia');
-                });
-
-                // Exemplo: Mostra as ocorrências selecionadas no console
-                console.log('Ocorrências selecionadas:', ocorrenciasNomes);
-            }
-        </script>
-	</body>
+        <nav>
+            <h4>Selecione a(s) ocorrência(s):</h4>
+            <section>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Sem uniforme">Sem uniforme</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Atraso">Atraso</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Não fez a atividade">Não fez a atividade</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Saiu da sala">Saiu da sala</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Atrapalhando a aula">Atrapalhando a aula</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Dificuldade no aprendizado">Dificuldade no aprendizado</button>
+                </a>
+            </section>
+            <h4>Selecione o(s) aluno(s):</h4>
+            <section>
+                <div>
+                    <input class="form-control" id="nome_aluno" type="text" name="nome_aluno" placeholder="Nome do aluno" />
+                </div>
+            </section>
+            <section>
+                <a href="#" onclick="atribuirOcorrencias();" target="">
+                    <button class="button_atribuir">Atribuir ocorrência</button>
+                </a>
+            </section>
+        </nav>
+        <footer>
+            <p>Desenvolvido por: Agis - Francisco Diego - Ronan - Samara</p>
+            <p>2023</p>
+        </footer>
+    </section>
+    <script src="script.js"></script>
+</body>
 </html>
