add agressão verbal/física, Edit "saiu de sala"

--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -31,13 +31,16 @@
                     <button class="button_link" data-ocorrencia="Não fez a atividade">Não fez a atividade</button>
                 </a>
                 <a href="#" onclick="selecionarBotao(this);" target="">
-                    <button class="button_link" data-ocorrencia="Saiu da sala">Saiu da sala</button>
+                    <button class="button_link" data-ocorrencia="Saiu da sala">Saiu sem permissão da sala</button>
                 </a>
                 <a href="#" onclick="selecionarBotao(this);" target="">
                     <button class="button_link" data-ocorrencia="Atrapalhando a aula">Atrapalhando a aula</button>
                 </a>
                 <a href="#" onclick="selecionarBotao(this);" target="">
                     <button class="button_link" data-ocorrencia="Dificuldade no aprendizado">Dificuldade no aprendizado</button>
+                </a>
+                <a href="#" onclick="selecionarBotao(this);" target="">
+                    <button class="button_link" data-ocorrencia="Agressão verbal ou fisica">Agressão verbal ou física</button>
                 </a>
             </section>
             <h4>Selecione o(s) aluno(s):</h4>
