Add Alert's: confirm ocorr., e op. feita c/ sucess

--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -19,7 +19,7 @@
             <h3 id="h3_boas_vindas">selecione uma ou mais alunos que deseja atribuir</h3>
         </section>
         <nav>
-            <h4>Selecione a(s) ocorrência(s):</h4>
+            <h4>Selecione a ocorrência:</h4>
             <section>
                 <a href="#" onclick="selecionarBotao(this);" target="">
                     <button class="button_link" data-ocorrencia="Sem uniforme">Sem uniforme</button>
@@ -50,8 +50,8 @@
                 </div>
             </section>
             <section>
-                <a href="#" onclick="atribuirOcorrencias();" target="">
-                    <button class="button_atribuir">Atribuir ocorrência</button>
+                <a href="#" target="">
+                    <button class="button_atribuir" onclick="confirmarOperacao()">Atribuir ocorrência</button>
                 </a>
             </section>
         </nav>
