Criação do script de busca do input da página registro de ocorrênias

--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -45,8 +45,20 @@
             </section>
             <h4>Selecione o(s) aluno(s):</h4>
             <section>
-                <div>
-                    <input class="form-control" id="nome_aluno" type="text" name="nome_aluno" placeholder="Nome do aluno" />
+                <div class="buscar">
+                    <input onkeyup="filtrar()" class="form-control" id="nome_aluno" type="text" name="nome_aluno" placeholder="Nome do aluno" />
+                    <ul id="listaAlunos">
+                        <li><a href="#"><span class="item-name">Brenda Rezende</span></a></li>
+                        <li><a href="#"><span class="item-name">Cecília Moreira</span></a></li>
+                        <li><a href="#"><span class="item-name">Daniel Monteiro</span></a></li>
+                        <li><a href="#"><span class="item-name">João Vitor das Neves</span></a></li>
+                        <li><a href="#"><span class="item-name">Leandro Pereira</span></a></li>
+                        <li><a href="#"><span class="item-name">Letícia Castro</span></a></li>
+                        <li><a href="#"><span class="item-name">Manuela Rocha</span></a></li>
+                        <li><a href="#"><span class="item-name">Paulo da Conceição</span></a></li>
+                        <li><a href="#"><span class="item-name">Rodrigo Martins</span></a></li>
+                        <li><a href="#"><span class="item-name">Ryan Pires</span></a></li>
+                    </ul>
                 </div>
             </section>
             <section>
