atualizando o projeto SAA
Atualização de páginas registro_ocor, script.ja, script2.js. criação da página de confirmação do registro.

--- a/selecao_curso.html
+++ b/selecao_curso.html
@@ -20,10 +20,10 @@
             <nav>
                 <section>
                     <a href="selecao_serie.html" target="">
-                        <button class="button_link">Técnico em Eventos</button>
+                        <button class="button_link" name="Técnico em Eventos">Técnico em Eventos</button>
                     </a>
                     <a href="selecao_serie.html" target="">
-                        <button class="button_link">Técnico em Informática</button>
+                        <button class="button_link" name="Técnico em Informática">Técnico em Informática</button>
                     </a>
                 </section>
             </nav>
