--- a/selecao_serie.html
+++ b/selecao_serie.html
@@ -20,13 +20,13 @@
             <nav>
                 <section>
                     <a href="selecao_turma.html" target="">
-                        <button class="button_link">1º Ano</button>
+                        <button id= 'serie' class="button_link">1º Ano</button>
                     </a>
                     <a href="selecao_turma.html" target="">
-                        <button class="button_link">2º Ano</button>
+                        <button id= 'serie' class="button_link" name="2º Ano">2º Ano</button>
                     </a>
                     <a href="selecao_turma.html" target="">
-                        <button class="button_link">3º Ano</button>
+                        <button id= 'serie' class="button_link">3º Ano</button>
                     </a>
                 </section>
             </nav>
