atualização da pagina de conclusão do registro
atualização da pagina de atualização do registro

--- a/registro_confirmado.html
+++ b/registro_confirmado.html
@@ -14,8 +14,8 @@
             <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
         </header>
        
-        <section id="boas_vindas">
-            <h2 id="h1_index" name="turma">Registro ocorrido com sucesso.</h2>
+        <section id="registro_sucesso">
+            <h3 class="h3_nome_sistema">Registro ocorrido com sucesso.</h3>
             
         </section>
         <nav>
