--- a/selecao_serie.html
+++ b/selecao_serie.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Sistema de Acompanhamento do Aluno</title>
-		<meta charset="utf-8" />
-		<meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
-		<meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
-		<meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
+    <head>
+        <title>Sistema de Acompanhamento do Aluno</title>
+        <meta charset="utf-8" />
+        <meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
+        <meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
+        <meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-	<body>
+    <body>
         <section class="tela">
             <header>
                 <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
             </header>
             <section id="boas_vindas">
                 <h1 id="h1_index">Ano/Série</h1>
+                <h3 id="curso_escolhido"></h3>
                 <h3 id="h3_boas_vindas">Selecione o ano do ensino médio</h3>
             </section>
             <nav>
                 <section>
-                    <a href="selecao_turma.html" target="">
-                        <button id= 'serie' class="button_link">1º Ano</button>
+                    <!-- Adicione "ano" como um parâmetro na URL -->
+                    <a href="selecao_turma.html?curso=Técnico em Eventos&ano=1" target="">
+                        <button id='serie' class="button_link">1º Ano</button>
                     </a>
-                    <a href="selecao_turma.html" target="">
-                        <button id= 'serie' class="button_link" name="2º Ano">2º Ano</button>
+                    <a href="selecao_turma.html?curso=Técnico em Informática&ano=2" target="">
+                        <button id='serie' class="button_link" name="2º Ano">2º Ano</button>
                     </a>
-                    <a href="selecao_turma.html" target="">
-                        <button id= 'serie' class="button_link">3º Ano</button>
+                    <a href="selecao_turma.html?curso=Técnico em Eventos&ano=3" target="">
+                        <button id='serie' class="button_link">3º Ano</button>
                     </a>
                 </section>
             </nav>
@@ -35,5 +37,7 @@
                 <p>2023</p>
             </footer>
         </section>
-	</body>
+        <script src="script.js"></script>
+
+    </body>
 </html>
