--- a/registro_ocor.html
+++ b/registro_ocor.html
@@ -79,7 +79,7 @@
             <p>2023</p>
         </footer>
     </section>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
