--- a/selecao_curso.html
+++ b/selecao_curso.html
@@ -19,8 +19,12 @@
             </section>
             <nav>
                 <section>
-                    <button class="button_link" onclick="selecionarCurso('Técnico em Eventos')">Técnico em Eventos</button>
-                    <button class="button_link" onclick="selecionarCurso('Técnico em Informática')">Técnico em Informática</button>
+                    <a href="selecao_serie.html" target="">
+                        <button class="button_link" onclick="selecionarCurso('Técnico em Eventos')">Técnico em Eventos</button>
+                    </a>
+                    <a href="selecao_serie.html" target="">
+                        <button class="button_link" onclick="selecionarCurso('Técnico em Informática')">Técnico em Informática</button>
+                    </a>
                 </section>
             </nav>
             <footer>
