Encaminhar para a página de registro_confirmado e Alteração da cor da ocorrencia selecionada

--- a/registro_confirmado.html
+++ b/registro_confirmado.html
@@ -15,7 +15,7 @@
         </header>
        
         <section id="registro_sucesso">
-            <h3 class="h3_nome_sistema">Registro ocorrido com sucesso.</h3>
+            <h3 class="h3_nome_sistema">Registro ocorrido com sucesso! Caso queira detalhar sua ocorrência, encaminhe email para: cdmi.cbra@ifb.edu.br</h3>
             
         </section>
         <nav>
