--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -15,8 +15,8 @@
         </header>
         <section id="boas_vindas">
             <h1 id="h1_index">Turma "X"</h1>
-            <h3 id="h3_boas_vindas">Selecione uma ou mais ocorrências e</h3>
-            <h3 id="h3_boas_vindas">selecione uma ou mais alunos que deseja atribuir</h3>
+            <h3 id="h3_boas_vindas">Selecione a ocorrência e</h3>
+            <h3 id="h3_boas_vindas">um ou mais alunos que deseja atribuí-la</h3>
         </section>
         <nav>
             <h4>Selecione a ocorrência:</h4>
