--- a/selecao_turma.html
+++ b/selecao_turma.html
@@ -5,8 +5,10 @@
         <meta charset="utf-8" />
         <meta name="author" content="Francisco Diego - Ronan - Agis - Samara"/>
         <meta name="keywords" content="acompanhamento, ifb, aluno, registro, ocorrências"/>
-        <meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">
+        <meta name="description" content="Sistema de Acompanhamento do Aluno é uma aplicação para registro de ocorrências.">  
+        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+      
     </head>
     <body>
         <section class="tela">
