Inclusão de subtitulo nas páginas de forma oculta.

--- a/registro_ocorrencia.html
+++ b/registro_ocorrencia.html
@@ -16,7 +16,10 @@
             <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
         </header>
         <section id="boas_vindas">
-            <h1 id="h1_index">Turma "X"</h1>
+            <h5 id="email_selecionado">E-mail de registro: fulano@fulano.com</h4>
+            <h5 id="curso_selecionado">Curso: Técnico em informática</h4>
+            <h5 id="serie_selecionada">Série: 1º Ano</h4>
+            <h1 id="turma_escolhida">Turma "X"</h1>
             <h3 id="h3_boas_vindas">Selecione um ou mais alunos e</h3>
             <h3 id="h3_boas_vindas">a ocorrência que deseja atribuir</h3>
         </section>
