--- a/selecao_turma.html
+++ b/selecao_turma.html
@@ -16,6 +16,9 @@
                 <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
             </header>
             <section id="boas_vindas">
+                <h5 id="email_selecionado">E-mail de registro: fulano@fulano.com</h4>
+                <h5 id="curso_selecionado">Curso: Técnico em informática</h4>
+                <h5 id="serie_selecionada">Série: 1º Ano</h4>
                 <h1 id="h1_index">Turma</h1>
                 <h3 id="escolhas_anteriores"></h3> <!-- Adicionado este elemento para exibir escolhas anteriores -->
                 <h3 id="h3_boas_vindas">Selecione a turma</h3>
