--- a/selecao_curso.html
+++ b/selecao_curso.html
@@ -16,6 +16,7 @@
                 <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
             </header>
             <section id="boas_vindas">
+                <h5 id="email_selecionado">E-mail de registro: fulano@fulano.com</h4>
                 <h1 id="h1_index">Curso</h1>
                 <h3 id="h3_boas_vindas">Selecione o curso integrado ao ensino médio</h3>
             </section>
