--- a/selecao_turma.html
+++ b/selecao_turma.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
       
     </head>
-    <body>
+    <body onload="subtitulo_turma();">
         <section class="tela">
             <header>
                 <img id="img_logo" src="img/IFB.png" alt="Logo do Instituto Federal Campus Brasília."/>
